# ubd

./: .gitignore  Makefile.in  README  configure  configure.ac
contrib/systemd/: ubd.service  ubnetd.service
firmware/: ackscheme
firmware/Build_Atmel_AM/: makefile
firmware/Build_Atmel_Bootloader/: bootloader.aps  bootloader.aws  bootloader.dsp  isp.e2s  makefile
firmware/Src_AM/: spec.txt
firmware/Src_Bootloader/: boot.c  boot.h  hal.h
firmware/Src_EM/: input.c  input.h  main.c  switch.c  switch.h
firmware/Src_common/: errlog.c  hal.h  msg.c  phc.c  phc.h  random.h  timer.c  uart.c  uart.h
firmware/a8/: makefile
firmware/acker/: main.c  sender.c
firmware/am8/: makefile
firmware/b644p/: makefile
firmware/bootloader/: Makefile  config.h  foodloader.c
firmware/bridge/: bridge.c  main.c  mgt.py  output.c  output.h  packet.py  serialinterface.py  usart.c
firmware/devtools/: 40-permissions.rules
firmware/hid/: Makefile  adc.c  busconfig.h  deviceconfig.h  hid.c  lcd.c  lcd.h  timer0.c  ubconfig.h
firmware/io/: Makefile  busconfig.h  digitalinput.c  digitalinput.h  digitaloutput.c  digitaloutput.h  io.c  protocol
firmware/lib/: bus.c  bus.h  busmgt.c  busmgt.h  busuart.c  busuart.h  errlog.c  errlog.h  frame.h  hal.h  msg.c  msg.h  packet.c  packet.h  phc.c  phc.h  phc.lst  random.c  random.h  rf12.c  rf12config.h  serial_handler.c  serial_handler.h  settings.c  settings.h  timer.c  timer.h  uart.c  uart.h  ub.c  ub.h  ubaddress.c  ubbridge.c  ubbridge.h  ubbridgemgt.c  ubbridgemgt.h  ubclasses.h  ubconfig.h  ubeeprom.c  ubeeprom.h  (+23 more)
firmware/logs/: sniff1
firmware/minimal/: Makefile  minimal.c  ubconfig.h
firmware/moodlamp-rf/: Makefile  adc.c  busconfig.h  cmd_handler.c  cmd_handler.h  config.h  control.c  control.h  deviceconfig.h  fnordlicht.c  leds.c  leds.h  makefile  pwm.c  pwm.h  scripts.h  settings.c  ubconfig.h
firmware/output/: main.c  output.c  output.h  softuart.c  softuart.h
firmware/p8/: makefile
firmware/packer/: main.c  sender.c
firmware/packetbridge/: bridge.c  bridge.h  serialinterface.py  spec.txt
firmware/pb644p/: makefile
firmware/rf12bridge/: Makefile  rf12bridge.c  ubconfig.h
firmware/rf12loader/: Makefile  rf12loader.c
firmware/rf12sniffer/: makefile  rf12.c  rf12gateway.c
firmware/rfbootloader/: Makefile  hid.c  rfbootloader.c  ubconfig.h
firmware/rftest/: Makefile  ubconfig.h
firmware/rgbcontroller/: Makefile  busconfig.h  cmd_handler.c  cmd_handler.h  config.h  control.c  control.h  fnordlicht.c  fnordlicht.h  pwm.c  pwm.h  settings.c  settings.h  timer0.h
firmware/rs485bridge/: makefile  rs485bridge.c
firmware/s8/: makefile
firmware/sender/: main.c  sender.c  sender.h
firmware/ubloader/: flash-m324p  flash.py  serialinterface.py
firmware/ubrfsniffer/: makefile  serial_handler.c  serial_handler.h  ubrf12.h
firmware2/lib/: Makefile  bus.c  busmgt.c  busmgt.h  isrdispatch.c  packet.c  random.c  serial_handler.c  serial_handler.h  settings.c  ub.c  ub.h  ubaddress.c  ubaddress.h  ubclient.c  ubclient.h  ubconfig.h  ubcrc.c  ubmaster.c  ubmaster.h  ubmastermgt.c  ubmastermgt.h  ubpacket.c  ubpacket.h  ubrs485client.c  ubrs485client.h  ubrs485master.c  ubrs485master.h  ubrs485message.c  ubrs485slave.c  ubrs485slave.h  ubrs485uart.c  ubrs485uart.h  ubslave.c  ubslave.h  ubslavemgt.c  ubslavemgt.h  ubstat.c  ubstat.h  ubtest.c  (+6 more)
firmware2/moodlamp-rf/: config.h  leds.c  makefile  rc5_handler.c  ubconfig.h
firmware2/p8/: makefile
firmware2/packer/: main.c  sender.h
firmware2/packetbridge/: bridge.h  main.c
firmware2/testclient/: Makefile  ubconfig.h  ubtest.c
firmware2/testmaster/: Makefile  ubconfig.h  ubtest.c
firmware2/testtwitter/: ubtest.c
openhcboot/Build_Atmel_Bootloader/: bootloader.dsw  eeprom_errlog.hex
openwrt/avahi/: Makefile
openwrt/ubd/: Makefile  Makefile.argv
software/bashscripts/: black  blink  fade  green  white
software/mgt/: logger.py  mgt.py  netinterface.py  packet.py  serialinterface.py
software/pythonexamples/: alarm.py  blink.py  colorgui.py  discover.py  fade.py  fadeexample.py  getcolor.py  getversion.py  hid.py  hsvcontroller.py  ircbot.py  lcdcontroller.py  round.py  round2.py  setid.py  setwhite.py  switch.py  switchsiren.py  wakeup.py
software/pythonlib/: alarm  (+12 more)
software/serial/serialtest/: configure.ac
software/serial/serialtest/src/: Makefile.am  busmgt.c  debug.c  debug.h  main.c  message.h  net6.c  net6.h  packet.c  packet.h  serial.c  serial.h  ubpacket.h
software/serial/serialtest/src/.deps/: main.Po
software/ubd/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
software/ubd/autom4te.cache/: output.0  requests  traces.0
software/ubd/contrib/: ubd  ubnetd
software/ubd/src/: Makefile.am  Makefile.in  address6.c  address6.h  address6db.c  address6db.h  avahi.c  avahi.h  blink  blinktcp  broadcast.c  bus.c  bus.h  busmgt.c  busmgt.h  classes.c  classes.h  cmd.c  cmdparser.c  cmdparser.h  config.c  config.h  daemon.c  db.c  db.h  debug.c  debug.h  groups  groups.c  groups.h  interface.c  interface.h  listen.c  listen.h  main.c  message.h  mgt.c  mgt.h  net.c  net.h  (+21 more)
src/: Makefile.am  Makefile.in  address6.c  address6db.c  address6db.h  avahi.c  avahi.h  blinktcp  broadcast.h  bus.h  busmgt.c  classes.c  classes.h  cmd.c  cmd.h  cmdparser.h  config.c  config.h  daemon.c  daemon.h  debug.c  directory-client.c  directory-client.h  directory-server.c  directory-server.h  groups.c  groups.h  jsontest  jsontest.py  listen.c  listen.h  main.c  mgt.c  net.c  net_multicast.c  net_multicast.h  net_tcp.h  net_udp.h  nodes.c  nodes.h  (+10 more)
(+82 files in other folders)
