bin_PROGRAMS = ubd
ubd_SOURCES = main.c serial.c debug.c net6.c packet.c busmgt.c ubpacket.h serial.h debug.h net6.h packet.h busmgt.h ubconfig.h message.h address6db.c address6db.h interface.c interface.h address6.h address6.c bus.c bus.h mgt.h mgt.c cmd.c cmd.h cmdparser.c cmdparser.h xmlconfig.c xmlconfig.h groups.c groups.h nodes.h nodes.c config.h config.c
