bin_PROGRAMS = ubd ubnetd
ubd_SOURCES = main.c serial.c debug.c net.c packet.c busmgt.c ubpacket.h serial.h debug.h net.h packet.h busmgt.h ubconfig.h message.h address6db.c address6db.h interface.c interface.h address6.h address6.c bus.c bus.h mgt.h mgt.c cmd.c cmd.h cmdparser.c cmdparser.h xmlconfig.c xmlconfig.h groups.c groups.h nodes.h nodes.c config.h config.c net_tcp.c net_tcp.h net_udp.c net_udp.h listen.c listen.h avahi.c avahi.h classes.c classes.h broadcast.c broadcast.h net_multicast.c net_multicast.h daemon.c daemon.h

ubnetd_SOURCES = ubnetd.c ubnetd.h
